# python-project-83

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  database.sql  pyproject.toml
.github/workflows/: my_personal_action.yml
page_analyzer/: __init__.py  app.py  db.py  test.py  url_analyzer.py  validator.py
page_analyzer/templates/: error_page.html  index.html  link_page.html  list_of_urls.html
tests/: test.py  test_app.py
