[tool.poetry]
name = "python-project-83"
version = "0.1.0"
description = ""
authors = ["Anisimoff <happyprooo@gmail.com>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]
flake8 = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
